--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="developerBar">Built and Developed by&nbsp; <a href="https://www.linkedin.com/in/ridhamsawhney/"> Ridham</a>👈🏼 ❤️</div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
